--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "URLChecker",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --watch index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/prashantgupta0206/URLCheckcer/issues"
   },
-  "homepage": "https://github.com/prashantgupta0206/URLCheckcer#readme"
+  "homepage": "https://github.com/prashantgupta0206/URLCheckcer#readme",
+  "dependencies": {
+    "selenium-webdriver": "^4.0.0-alpha.1"
+  }
 }
