--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/prashantgupta0206/URLCheckcer#readme",
   "dependencies": {
+    "chromedriver": "^2.40.0",
     "selenium-webdriver": "^4.0.0-alpha.1"
   }
 }
