--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/prashantgupta0206/URLCheckcer#readme",
   "dependencies": {
     "chromedriver": "^2.40.0",
+    "request": "^2.87.0",
     "selenium-webdriver": "^4.0.0-alpha.1"
   }
 }
