--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/prashantgupta0206/URLCheckcer#readme",
   "dependencies": {
     "chromedriver": "^2.40.0",
+    "fs": "0.0.1-security",
     "request": "^2.87.0",
-    "selenium-webdriver": "^4.0.0-alpha.1"
+    "selenium-webdriver": "^4.0.0-alpha.1",
+    "xlsx": "^0.13.2"
   }
 }
